Fix search bar on mobile

--- a/src/webapp/api/static/styles/search-bar.css
+++ b/src/webapp/api/static/styles/search-bar.css
@@ -25,5 +25,6 @@
         margin-top: 150px; 
         border-radius: 100px;
         text-indent: 30px;
+        top: 150px;
     }
 }
